fix: aligment of splash message to align with shorter title

--- a/_sass/components/_splash.scss
+++ b/_sass/components/_splash.scss
@@ -9,8 +9,8 @@
   text-decoration: none;
   color: yellow;
   position: relative;
-  top: 380px;
-  right: -19px;
+  top: 300px;
+  right: 500px;
   font-size: 20px;
 
 /* Media query to hide the splash message on mobile devices */
